# NLP_assignment2

./: .gitignore  README.md  functions_models.py  main.py  pyproject.toml  requirements.txt
data/: fast.txt
src/: ablation.py  data_handler.py  error_analysis.py  evaluation.py  functions_models.py  hyperparameter_evaluation.py  models.py
